# P0267_RefImpl

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CONSUMING.md  Design questions.md  GNU-Linux_build_instructions.txt  LICENSE.md  Makefile.am  README.md  TODO.md  appveyor.yml  build-emscripten.sh  build-linux-cairo-sdl2.sh  build-macos-cairo-sdl2.sh  configure.ac  debug-emscripten-httpd.py  generate_cairo_xlib_linux_debug.sh  generate_cairo_xlib_xcode_custom_libcxx_debug.sh  generate_cg_mac_xcode_custom_libcxx_debug.sh  generate_make_custom_libcxx_debug.sh  generate_vs_vcpkg.bat  generate_vs_vcpkg_debug.bat  generate_vs_vcpkg_release.bat  generate_xcode_custom_libcxx_debug.sh  generate_xcode_with_custom_libcxx.sh  run-configure-with-clang-and-libc++-and-xcb.sh  run-configure-with-clang-and-libc++.sh  run-configure-with-clang-and-libstdc++.sh  run-configure-with-clang5-macports.sh  run-configure-with-g++-7-and-libstdc++-and-xcb.sh  run-configure-with-g++-7-and-libstdc++.sh  run-configure-with-gcc4_9-and-libstdc++.sh  run-configure-with-gcc5-and-libstdc++.sh  run-configure-with-gcc6-and-libstdc++.sh  run-configure-with-gcc8-macports.sh  run-configure-with-xcb-clang-and-libstdc++.sh  run-configure-with-xcb-gcc4_9-and-libstdc++.sh  run-configure-with-xcb-gcc5-and-libstdc++.sh
N3888_RefImpl/SampleApp/: Clang_C2_vcpkg_Debug.props  Makefile.am  SampleApp.vcxproj  SampleApp.vcxproj.filters  brush_examples.cpp  entrypoint.cpp  path_examples.cpp  path_examples.h  sample_draw.cpp  sample_draw.h
N3888_RefImpl/src/: .gitignore  Makefile.am  N3888_RefImpl.ui  N3888_RefImpl.ui.h  N3888_RefImpl.vcxproj  N3888_RefImpl.vcxproj.filters  RefImplApp.c  RefImplApp.h  RefImplWindow.h  Win32RenderWindow.cpp  Win32RenderWindow.h  brush.cpp  circle.cpp  color_stop.cpp  context.cpp  device.cpp  display_surface-common.cpp  display_surface-win32.cpp  display_surface-xcb.cpp  display_surface-xlib.cpp  drawing.h  drawing_exception.cpp  entrypoint-gtk.cpp  entrypoint-win32.cpp  entrypoint-win32.h  entrypoint.cpp  font_extents.cpp  font_face.cpp  font_options.cpp  font_options_builder.cpp  font_options_factory.cpp  font_resource.cpp  font_resource_factory.cpp  glyph.cpp  glyph_run.cpp  gradient_pattern.cpp  image_surface.cpp  io2d.h  io2d_error_category.cpp  linear_brush_factory.cpp  (+67 more)
N3888_RefImpl/src/win32/: DLL build instructions.txt  Dependency installation instructions.txt
P0267_RefImpl/Demo/RocksInSpace/: Asteroid.cpp  Asteroid.h  CMakeLists.txt  Game.cpp  Game.h  ImplWin.cpp  ImplWin.h  MacMain.cpp  Makefile.am  RocksInSpace.vcxproj  RocksInSpace.vcxproj.filters  Win32Win.cpp  XlibWin.cpp
P0267_RefImpl/P0267_RefImpl/: .gitignore  CMakeLists.txt  Clang_C2_vcpkg_Release.props  Makefile.am  P0267_RefImpl.vcxproj  P0267_RefImpl.vcxproj.filters  cairo_renderer-graphicsmagickinit.cpp  cairo_renderer_display_surface-common.cpp  cairo_renderer_image_surface.cpp  cairo_renderer_standalone_functions.cpp  cairo_renderer_surface.cpp  cairo_renderer_win32.cpp  cairo_renderer_xlib.cpp  display_surface-common.cpp  display_surface-win32.cpp  display_surface-xlib.cpp  image_surface.cpp  io2d.h  rgba_color.cpp  standalone_functions.cpp  surface.cpp  test_process.h  test_renderer.h  test_renderer_fill.cpp  xbrushes.h  xbrushes_impl.h  xcairo.h  xcairo_brushes_impl.h  xcairo_helpers.h  xcairo_impl.h  xcairo_paths_impl.h  xcairo_surfaces_image_impl.h  xcairo_surfaces_impl.h  xcairo_surfaces_output_impl.h  xcairo_surfaces_unmanaged_impl.h  xcolor.h  xcommandlist.h  xcommandlist_impl.h  xcommandlistbuilder_impl.h  xgeometry.h  (+23 more)
P0267_RefImpl/P0267_RefImpl/Qt/: CMakeLists.txt  xio2d_qt_main.h  xqt.h  xqt_brushes_impl.h  xqt_command_list_impl.h  xqt_headers.h  xqt_helpers.h  xqt_paths_impl.h  xqt_surface_state_props_impl.h  xqt_surfaces_image_impl.h  xqt_surfaces_impl.h  xqt_text_impl.h
P0267_RefImpl/P0267_RefImpl/cairo/: CMakeLists.txt  cairo_renderer-graphicsmagickinit.cpp  cairo_renderer_win32.cpp  io2d.h.orig  xcairo.h  xcairo_brushes_impl.h  xcairo_command_list_impl.h  xcairo_helpers.h  xcairo_paths_impl.h  xcairo_surface_state_props_impl.h  xcairo_surfaces_image_impl.h  xcairo_surfaces_impl.h  xcairo_text_impl.h  xio2d_cairo_main.h
P0267_RefImpl/P0267_RefImpl/coregraphics/: CMakeLists.txt  io2d_cg_brushes.h  io2d_cg_colors.cpp  io2d_cg_gradient.h  io2d_cg_interop.h  io2d_cg_main.h  io2d_cg_paths_figures.cpp  io2d_cg_surfaces.cpp  io2d_cg_surfaces.h  io2d_cg_texture.cpp  io2d_cg_texture.h  xio2d_cg_brushes.cpp  xio2d_cg_brushes.h  xio2d_cg_colors.cpp  xio2d_cg_display.cpp  xio2d_cg_display.h  xio2d_cg_fps_counter.cpp  xio2d_cg_fps_counter.h  xio2d_cg_gradient.cpp  xio2d_cg_gradient.h  xio2d_cg_interop.h  xio2d_cg_main.h  xio2d_cg_paths.cpp  xio2d_cg_paths.h  xio2d_cg_paths_figures.cpp  (+8 more)
P0267_RefImpl/RocksInSpace/: Asteroid.cpp  Asteroid.h  Constants.h  Game.cpp  Game.h  GameXlib.cpp  GameXlib.h  ImplWin.cpp  Input.cpp  Input.h  Makefile.am  Maths.cpp  Maths.h  Physics.cpp  Physics.h  Renderer.h  RocksInSpace.vcxproj  RocksInSpace.vcxproj.filters  Ship.cpp  Ship.h  Types.h  Win.cpp  Win32Win.cpp  Win32Win.h  WinMain.cpp  XlibWin.cpp
P0267_RefImpl/SampleApp/: 2017_07_12.tiff  Makefile.am  SampleApp.vcxproj  brush_examples.cpp  brush_examples.h  entrypoint.cpp  path_examples.cpp  path_examples.h  sample_draw.cpp  sample_draw.h
P0267_RefImpl/Samples/: CMakeLists.txt  emscripten_template_page.html
P0267_RefImpl/Tests/: CMakeLists.txt  background_paint.cpp  blending.cpp  color.cpp  comparison.cpp  comparison.h  frontend_semantics.cpp  image_format.cpp  image_io.cpp  linear_gradient.cpp  main.cpp  mask.cpp  radial_gradient.cpp  rectangle_stroke.cpp  stroke_dashes.cpp  stroke_width.cpp  surface_brush.cpp
examples/hello-world/: CMakeLists.txt  hello.cpp  tga_header.h
io2d/src/: CMakeLists.txt  N3888_RefImpl.vcxproj  N3888_RefImpl.vcxproj.filters  display_surface-common.cpp  display_surface-xlib.cpp  font_options.cpp  font_resource_factory.cpp  glyph_run.cpp  image_surface.cpp  mapped_surface.cpp  path_data_item.cpp  solid_color_brush_factory.cpp  standalone_functions.cpp  surface.cpp
(+301 files in other folders)
