cmake_minimum_required(VERSION 3.0.0)
project(io2d CXX)

if(EMSCRIPTEN)
	set(CMAKE_EXECUTABLE_SUFFIX ".html")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --shell-file ${CMAKE_CURRENT_SOURCE_DIR}/emscripten_template_page.html" )
endif()

# add_subdirectory(draw_cpp)
add_subdirectory(rocks_in_space)
# add_subdirectory(svg)
add_subdirectory(life)
# add_subdirectory(cpu_load)
# add_subdirectory(sprites)
add_subdirectory(color_fill)
